--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -389,6 +389,8 @@
                                         Items total
                                         <span th:text="${shoppingCartViewModel.getProductAmount()}">$918.00</span>
                                     </li>
+
+
                                     <li style="display: none">
                                         tax
                                         <span>$9.00</span>
@@ -444,7 +446,9 @@
                     </div>
                 </div>
             </div>
-            <footer>
+
+            <footer class="footer" th:replace="/fragment/footer :: footer"></footer>
+            <footer style="display: none">
                 <div class="footer-top pt-210 pb-98 theme-bg">
                     <div class="container">
                        <div class="row">
