--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -341,7 +341,7 @@
                                             <div class="checkout-form-list">
                                                 <label>Full Name <span class="required">*</span></label>
                                                 <input type="text" placeholder=""
-                                                       id="input-name"th:field="*{customerName}">
+                                                       id="input-name" th:field="*{customerName}">
                                             </div>
                                         </div>
                                         <div class="col-md-12">
@@ -613,7 +613,9 @@
                     </div>
                 </div>
             </div>
-            <footer>
+
+            <footer class="footer" th:replace="/fragment/footer :: footer"></footer>
+            <footer style="display: none">
                 <div class="footer-top pt-210 pb-98 theme-bg">
                     <div class="container">
                        <div class="row">
