--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -6,101 +6,94 @@
 </head>
 <body>
 <div class="hiraola-footer_area" th:fragment="footer">
-    <div class="footer-top_area">
+    <div class="footer-top pt-210 pb-98 theme-bg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="footer-widgets_info">
-
-                        <div class="footer-widgets_logo">
-                            <a href="#">
-                                <img th:src="@{/client/images/footer/logo/1.png}" alt="Hiraola's Footer Logo">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="footer-widget mb-30">
+                        <div class="footer-logo">
+                            <a href="index.html">
+                                <img src="/img/logo/2.png" alt="">
                             </a>
                         </div>
-
-                        <div class="widget-short_desc">
-                            <p>We are a team of designers and developers that create high quality HTML Template & Woocommerce, Shopify Theme.
-                            </p>
+                        <div class="footer-about">
+                            <p><span>OSWAN</span> the most latgest car store in the wold can serve you latest ulity of motorcycle soucan sell here your motorcycle it quo </p>
+                            <div class="footer-support">
+                                <h5>FOR SUPPORT</h5>
+                                <span> 01245 658 698 (Toll Free)</span>
+                            </div>
                         </div>
-                        <div class="hiraola-social_link">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="footer-widget mb-30 pl-60">
+                        <div class="footer-widget-title">
+                            <h3>QUICK LINK</h3>
+                        </div>
+                        <div class="quick-links">
                             <ul>
-                                <li class="facebook">
-                                    <a href="https://www.facebook.com/" data-toggle="tooltip" target="_blank" title="Facebook">
-                                        <i class="fab fa-facebook"></i>
-                                    </a>
-                                </li>
-                                <li class="twitter">
-                                    <a href="https://twitter.com/" data-toggle="tooltip" target="_blank" title="Twitter">
-                                        <i class="fab fa-twitter-square"></i>
-                                    </a>
-                                </li>
-                                <li class="google-plus">
-                                    <a href="https://www.plus.google.com/discover" data-toggle="tooltip" target="_blank" title="Google Plus">
-                                        <i class="fab fa-google-plus"></i>
-                                    </a>
-                                </li>
-                                <li class="instagram">
-                                    <a href="https://rss.com/" data-toggle="tooltip" target="_blank" title="Instagram">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
+                                <li><a href="about-us.html">About us</a></li>
+                                <li><a href="#">Service</a></li>
+                                <li><a href="#">Inventory</a></li>
+                                <li><a href="shop.html">Shop</a></li>
+                                <li><a href="blog-sidebar.html">Blog</a></li>
+                                <li><a href="#">Conditions</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8">
-                    <div class="footer-widgets_area">
-                        <div class="row">
-                            <div class="col-lg-3">
-                                <div class="footer-widgets_title">
-                                    <h6>Product</h6>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="footer-widget mb-30">
+                        <div class="footer-widget-title">
+                            <h3>LATEST TWEET</h3>
+                        </div>
+                        <div class="food-widget-content pr-30">
+                            <div class="single-tweet">
+                                <p><a href="#">@Smith,</a> the most latgest bike store in the wold can serve you
+                                    10 min ago</p>
+                            </div>
+                            <div class="single-tweet">
+                                <p><a href="#">@Smith,</a> the most latgest bike store in the wold can serve you
+                                    10 min ago</p>
+                            </div>
+                            <div class="single-tweet">
+                                <p><a href="#">@Smith,</a> the most latgest bike store in the wold can serve you
+                                    10 min ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="footer-widget mb-30">
+                        <div class="footer-widget-title">
+                            <h3>CONTACT INFO</h3>
+                        </div>
+                        <div class="food-info-wrapper">
+                            <div class="food-address">
+                                <div class="food-info-title">
+                                    <span>Address</span>
                                 </div>
-                                <div class="footer-widgets">
-                                    <ul>
-                                        <li><a href="#">Prices drop</a></li>
-                                        <li><a href="#">New products</a></li>
-                                        <li><a href="#">Best sales</a></li>
-                                        <li><a href="#">Contact us</a></li>
-                                    </ul>
+                                <div class="food-info-content">
+                                    <p>276 Jhilli Nogor, 4th folor, Momen Tower, Main Town, New Yourk</p>
                                 </div>
                             </div>
-                            <div class="col-lg-5">
-                                <div class="footer-widgets_info">
-                                    <div class="footer-widgets_title">
-                                        <h6>About Us</h6>
-                                    </div>
-                                    <div class="widgets-essential_stuff">
-                                        <ul>
-                                            <li class="hiraola-address"><i class="ion-ios-location"></i><span>Address:</span> The Barn, Ullenhall, Henley
-                                                in
-                                                Arden B578 5CC, England</li>
-                                            <li class="hiraola-phone"><i class="ion-ios-telephone"></i><span>Call Us:</span> <a href="tel://+123123321345">+123 321 345</a>
-                                            </li>
-                                            <li class="hiraola-email"><i class="ion-android-mail"></i><span>Email:</span> <a href="mailto://info@yourdomain.com">info@yourdomain.com</a></li>
-                                        </ul>
-                                    </div>
+                            <div class="food-address">
+                                <div class="food-info-title">
+                                    <span>Phone</span>
+                                </div>
+                                <div class="food-info-content">
+                                    <p>+090 12568 369 987</p>
+                                    <p>+090 12568 369 987</p>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
-                                <div class="instagram-container footer-widgets_area">
-                                    <div class="footer-widgets_title">
-                                        <h6>Sign Up For Newslatter</h6>
-                                    </div>
-                                    <div class="widget-short_desc">
-                                        <p>Subscribe to our newsletters now and stay up-to-date with new collections</p>
-                                    </div>
-                                    <div class="newsletter-form_wrap">
-                                        <form action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="newsletters-form validate" target="_blank" novalidate>
-                                            <div id="mc_embed_signup_scroll">
-                                                <div id="mc-form" class="mc-form subscribe-form">
-                                                    <input id="mc-email" class="newsletter-input" type="email" autocomplete="off" placeholder="Enter your email" />
-                                                    <button class="newsletter-btn" id="mc-submit">
-                                                        <i class="ion-android-mail" aria-hidden="true"></i>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
+                            <div class="food-address">
+                                <div class="food-info-title">
+                                    <span>Web</span>
+                                </div>
+                                <div class="food-info-content">
+                                    <a href="#">info@oswanmega.com</a>
+                                    <a href="#">www.oswanmega.com</a>
                                 </div>
                             </div>
                         </div>
@@ -109,21 +102,17 @@
             </div>
         </div>
     </div>
-    <div class="footer-bottom_area">
+    <div class="footer-bottom ptb-35 black-bg">
         <div class="container">
-            <div class="footer-bottom_nav">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="payment">
-                            <a href="#">
-                                <img th:src="@{/client/images/footer/payment/1.png}" alt="Hiraola's Payment Method">
-                            </a>
-                        </div>
+            <div class="row">
+                <div class="col-md-8 col-12">
+                    <div class="copyright">
+                        <p>©Copyright, 2018 All Rights Reserved by <a href="https://freethemescloud.com/">Free themes Cloud</a></p>
                     </div>
-                    <div class="col-lg-12">
-                        <div class="copyright">
-                            <span>Copyright &copy; 2019 <a href="#">Hiraola.</a> All rights reserved.</span>
-                        </div>
+                </div>
+                <div class="col-md-4 col-12">
+                    <div class="footer-payment-method">
+                        <a href="#"><img alt="" src="/img/icon-img/payment.png"></a>
                     </div>
                 </div>
             </div>
