--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -647,7 +647,9 @@
                     </div>
                 </div>
             </div>
-            <footer>
+
+            <footer class="footer" th:replace="/fragment/footer :: footer"></footer>
+            <footer style="display: none">
                 <div class="footer-top pt-210 pb-98 theme-bg">
                     <div class="container">
                        <div class="row">
