--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -39,7 +39,7 @@
                                             </ul>
                                         </li>
                                         <li><a th:href="@{/cart/add}">cart</a></li>
-                                        <li><a th:href="@{/order/checkout}">checkout</a></li>
+                                        <li style="display: none"><a th:href="@{/order/checkout}">checkout</a></li>
                                         <li style="display: none"><a th:href="@{/order/history}">order history</a></li>
                                         <li style="display: none">
                                             <a href="#">pages</a>
