--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -386,7 +386,7 @@
                                         <a style="display: none"
                                            data-toggle="tab" href="#accessory-product">ACCESSORIES</a>
                                     </div>
-                                    <div class="sorting sorting-bg-1">
+                                    <div style="display: none" class="sorting sorting-bg-1">
                                         <form>
                                             <select class="select">
                                                 <option value="">Default softing </option>
