--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -524,7 +524,7 @@
                                     </div>
                                 </div>
 <!--                                Test-->
-                                <div style="display: none" class="product-wrapper-bundle">
+                                <!--<div style="display: none" class="product-wrapper-bundle">
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
@@ -740,7 +740,7 @@
                                         </div>
                                     </div>
                                 </div>
-
+-->
                             </div>
                         </div>
 
